[project]
name = "tunely"
version = "0.1.0"
description = "Music Downloader"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "librespot",
    "music-tag>=0.4.3",
    "platformdirs>=4.3.8",
    "sqlalchemy>=2.0.43",
]

[tool.uv.sources]
librespot = { git = "https://github.com/kokarare1212/librespot-python" }
